# AIO-research

./: LICENSE  README.md  aio_cli.py  aio_signing.py  generate_signature.py  requirements.txt  test_soup_copy.py
adapters/: aio-signing.js  aio-signing.php
adapters/agent/: README.md  aio-verification-api.js  aio-verifier.js  aio_verifier.py
adapters/contentful/: aio-contentful.js
adapters/drupal/: aio_signing.info.yml  aio_signing.module
adapters/ghost/: aio-helper.js
adapters/laravel/: AIOMiddleware.php  AIOServiceProvider.php  AIOSigning.php
adapters/react/: AIOProvider.jsx  next-example.jsx
adapters/shopify/: aio-snippet.liquid
adapters/strapi/: aio-middleware.js
adapters/wordpress/: aio-signing-plugin.php
aio_core/: __init__.py  anchor_generator.py  binder.py  noise_stripper.py  structure_extractor.py
aio_core/core/: envelope.py
docs/: ADOPTION_STRATEGY.md  AIO_INTEGRATION_GUIDE.md  IMPLEMENTATION.md  PITCH_DRAFT.md
docs/docs/: README.md
examples/demo_site/: index.html  robots.txt  sitemap.xml  style.css
examples/test_site/: index.html
prototype/demo-site/: ai-content.aio  ai-manifest.json  index.html  robots.txt
prototype/parser/: README.md
prototype/parser/python/: __init__.py  discovery.py  fallback.py  fetcher.py  parser.py  pyproject.toml
rag-prototype/aio_api/: __init__.py  server.py  storage.py
rag-prototype/aio_core/: __init__.py  anchor_generator.py  binder.py  envelope.py  noise_stripper.py  pipeline.py  structure_extractor.py
research/benchmarks/: benchmark_results.json  benchmark_suite.py  test_aio.py  test_classic.html  test_hybrid.html  test_pure_aio.html
spec/: AIO-SPECIFICATION-v1.0.md
specs/: aio-schema-v2.1.md
(+70 files in other folders)
